<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/result_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.3"
        android:gravity="center_vertical|end"
        android:letterSpacing="0.05"
        android:maxLines="1"
        android:paddingHorizontal="20dp"
        android:text="0"
        android:textSize="50sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <GridLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:columnCount="4"
        android:rowCount="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_text">

        <Button
            android:id="@+id/clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="?colorTertiary"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="onClearClick"
            android:text="@string/clear_button"
            android:textColor="?colorOnTertiary"
            android:textSize="22sp"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/plus_minus_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="?colorTertiary"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/plus_minus"
            android:onClick="onChangeSignClick"
            android:textColor="?colorOnTertiary"
            android:textSize="22sp"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/backspace_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="?colorTertiary"
            android:insetTop="0dp"
            android:onClick="onBackspaceClick"
            android:insetBottom="0dp"
            android:text="@string/backspace"
            android:textColor="?colorOnTertiary"
            android:textSize="22sp"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/divide_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="onDivideClick"
            android:text="@string/divide"
            android:textSize="22sp"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="?colorSecondaryContainer"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="onDigitClick"
            android:text="1"
            android:textColor="?colorOnSecondaryContainer"
            android:textSize="22sp"
            app:cornerRadius="0dp"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/button_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="?colorSecondaryContainer"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="onDigitClick"
            android:text="2"
            android:textColor="?colorOnSecondaryContainer"
            android:textSize="22sp"
            app:cornerRadius="0dp"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/button_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="?colorSecondaryContainer"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="onDigitClick"
            android:text="3"
            android:textColor="?colorOnSecondaryContainer"
            android:textSize="22sp"
            app:cornerRadius="0dp"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/button_multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="onMultiplyClick"
            android:text="@string/multiply"
            android:textSize="22sp"
            app:cornerRadius="0dp" />


        <Button
            android:id="@+id/button_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="?colorSecondaryContainer"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="onDigitClick"
            android:text="4"
            android:textColor="?colorOnSecondaryContainer"
            android:textSize="22sp"
            app:cornerRadius="0dp"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/button_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="?colorSecondaryContainer"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="onDigitClick"
            android:text="5"
            android:textColor="?colorOnSecondaryContainer"
            android:textSize="22sp"
            app:cornerRadius="0dp"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/button_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="?colorSecondaryContainer"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="onDigitClick"
            android:text="6"
            android:textColor="?colorOnSecondaryContainer"
            android:textSize="22sp"
            app:cornerRadius="0dp"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/button_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="onMinusClick"
            android:text="@string/minus"
            android:textSize="22sp"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/button_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="?colorSecondaryContainer"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="onDigitClick"
            android:text="7"
            android:textColor="?colorOnSecondaryContainer"
            android:textSize="22sp"
            app:cornerRadius="0dp"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/button_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="?colorSecondaryContainer"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="onDigitClick"
            android:text="8"
            android:textColor="?colorOnSecondaryContainer"
            android:textSize="22sp"
            app:cornerRadius="0dp"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/button_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="?colorSecondaryContainer"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="onDigitClick"
            android:text="9"
            android:textColor="?colorOnSecondaryContainer"
            android:textSize="22sp"
            app:cornerRadius="0dp"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/button_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="onPlusClick"
            android:text="@string/plus"
            android:textSize="22sp"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/button_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:backgroundTint="?colorSecondaryContainer"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="onDigitClick"
            android:text="0"
            android:textColor="?colorOnSecondaryContainer"
            android:textSize="22sp"
            app:cornerRadius="0dp"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/button_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:backgroundTint="?colorSecondaryContainer"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/dot"
            android:onClick="onDotClick"
            android:textColor="?colorOnSecondaryContainer"
            android:textSize="22sp"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/button_equals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="onEqualsClick"
            android:text="@string/equals"
            android:textSize="22sp"
            app:cornerRadius="0dp" />

    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>